install/strimzi-mcp/overlays/dev-openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: streamshub-mcp-strimzi
  annotations:
    haproxy.router.openshift.io/timeout: 3600s
    haproxy.router.openshift.io/balance: source
spec:
  to:
    kind: Service
    name: streamshub-mcp-strimzi
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
